--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
